Edits all over the shop

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -74,6 +74,8 @@
 %\cite{gog2014theory}
 
 \section{Conclusions}
+\label{sec-conclusions}
+\input{sec-conclusion.tex}
 
 % include your own bib file like this:
 \bibliographystyle{acl}
