--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -1,5 +1,5 @@
 
-\subsection{Datasets}
+\paragraph{Datasets}
 We used Europarl dataset and the data was numberized after tokenizing, splitting, and excluding xml markups. The first $10K$ sentences were used as the test data, and the last 80\% as the training data. %(See Table~\ref{fig:data})
 
 %\begin{table}
