--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -1,5 +1,5 @@
 
-\subsection{Datasets}
+\paragraph{Datasets.}
 We used Europarl dataset and the data was numberized after tokenizing, splitting, and excluding xml markups. The first $10K$ sentences were used as the test data, and the last 80\% as the training data. %(See Table~\ref{fig:data})
 
 %\begin{table}
@@ -20,7 +20,7 @@ We used Europarl dataset and the data was numberized after tokenizing, splitting
 %\caption{Tokens and sentence counts refer to the training partition. \trevor{Move to \supp}}\label{fig:data}
 %\end{table}
 
-\paragraph{Perplexity}
+\paragraph{Perplexity.}
 We evaluated the perplexity across different languages and using \ngrams of varying order from $m=2$ to $\infty$ (unbounded), as shown on Figure~\ref{fig:pplx}.
 Our results matched the perplexity results from \SRILM (for smaller values of $m$ in which \SRILM training was feasible, $m \le 10$).
 Note that perplexity drops dramatically from $m=2\ldots5$ however the gains thereafter are modest for most languages.
@@ -29,7 +29,7 @@ We speculate that the perplexity plateau is due to the simplistic Kneser-Ney dis
 We leave further exploration of richer discounting techniques such as Modified Kneser-Ney \cite{chen_goodman} or the Sequence Memoizer \cite{wood_teh} to our future work.
 
 
-\paragraph{Time-Memory}
+\paragraph{Time-Memory.}
 Figure~\ref{fig:spacetime} ($\log-\log$) compares our timing and memory usage with \SRILM on German part of the Europarl dataset and highlights the merits of our method both in construction and query time. In construction time, while both of our approaches are independent of the order of $m$gram, our fixed construction time outperforms both \SRILM methods in terms of memory for $m$grams of $5$ and higher orders. In terms of the timing, we outperform \SRILM compact after bigram, and \SRILM default for $m$grams of $3$ and higher orders. In query time, our memory footprint is constant and much lower that \SRILM compact, and default after $3$, and $2$ respectively. While in terms of timing, the single CST method is $300x$ slower compared to \SRILM for $2$-gram, this gap decreases to $12x$ for $10$-gram.  Another observation is the computational cost of computing $\nlplus{\Bigcdot \alpha \Bigcdot}$ when moving from $2$-gram, to $3$-gram which affects the timing. As mentioned earlier, this quantity is not required unless we move to $3$ or higher order $m$grams.
 
 \begin{figure}[tb]
