--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -1,6 +1,7 @@
 
 \paragraph{Datasets}
 We used Europarl dataset and the data was numberized after tokenizing, splitting, and excluding xml markups. The first $10K$ sentences were used as the test data, and the last 80\% as the training data. %(See Table~\ref{fig:data})
+\trevor{Sentence on wikipedia}
 
 %\begin{table}
 %\resizebox{1\columnwidth}{!}{
@@ -21,16 +22,24 @@ We used Europarl dataset and the data was numberized after tokenizing, splitting
 %\end{table}
 
 \paragraph{Perplexity}
-We evaluated the perplexity across different languages and using \ngrams of varying order from $m=2$ to $\infty$ (unbounded), as shown on Figure~\ref{fig:pplx}.
+We evaluated the perplexity across different languages and using \ngrams of varying order from $m\in[2,\infty)$ (unbounded), as shown on Figure~\ref{fig:pplx}.
 Our results matched the perplexity results from \SRILM (for smaller values of $m$ in which \SRILM training was feasible, $m \le 10$).
 Note that perplexity drops dramatically from $m=2\ldots5$ however the gains thereafter are modest for most languages.
 Despite this, several large \ngram matches were found as illustrated in Figure~\ref{fig:germanpattern}, ranging in size up to a 34-gram match.
-We speculate that the perplexity plateau is due to the simplistic Kneser-Ney discounting formula which is not designed for higher order \ngram LMs and appear to discount large \ngrams too aggressively. 
-We leave further exploration of richer discounting techniques such as Modified Kneser-Ney \cite{chen_goodman} or the Sequence Memoizer \cite{wood_teh} to our future work.
+We propose that the perplexity plateau is due to the simplistic Kneser-Ney discounting formula which is not designed for higher order \ngram LMs and appear to discount large \ngrams too aggressively. 
+%We leave further exploration of richer discounting techniques such as Modified Kneser-Ney \cite{chen_goodman} or the Sequence Memoizer \cite{wood_teh} to our future work.
+Richer discounting techniques such as Modified Kneser-Ney \cite{chen1996empirical} or the Sequence Memoizer \cite{wood2011sequence} would be able to better exploit these large contexts.
 
 
 \paragraph{Time-Memory}
-Figure~\ref{fig:spacetime} ($\log-\log$) compares our timing and memory usage with \SRILM on German part of the Europarl dataset and highlights the merits of our method both in construction and query time. In construction time, while both of our approaches are independent of the order of $m$gram, our fixed construction time outperforms both \SRILM methods in terms of memory for $m$grams of $5$ and higher orders. In terms of the timing, we outperform \SRILM compact after bigram, and \SRILM default for $m$grams of $3$ and higher orders. In query time, our memory footprint is constant and much lower that \SRILM compact, and default after $3$, and $2$ respectively. While in terms of timing, the single CST method is $300x$ slower compared to \SRILM for $2$-gram, but this gap gets reduced to $12x$ for $10$-gram.  Another observation is the computational cost of computing $\nlplus{\Bigcdot \alpha \Bigcdot}$ when moving from $2$-gram, to $3$-gram which affects the timing. As mentioned earlier, this quantity is not required unless we move to $3$ or higher order $m$grams.
+Figure~\ref{fig:spacetime} ($\log-\log$) compares our timing and memory usage with \SRILM on German part of the Europarl dataset and highlights the merits of our method both in construction and query time. In construction time, while both of our approaches are independent of the order of $m$gram, our fixed construction time outperforms both \SRILM methods in terms of memory for orders $m \ge 5$. 
+In terms of time, we outperform \SRILM compact beyond bigrams, and \SRILM default for $m \ge 3$. 
+For querying, our memory footprint is constant and much lower that \SRILM compact and \SRILM default after $m=3$, and $m=2$ respectively. 
+The results are less impressive for query times, in which the single CST method is $300x$ slower compared to \SRILM for $2$-gram, but shows better scaling, with the gap reducing to $12x$ worse by $10$-grams.  
+Also observe the high the computational cost of computing $\nlplus{\Bigcdot \alpha \Bigcdot}$, which is apparent when moving from $m=2$ to $m=3$, the first point where this method is called. 
+This is an obvious candidate for optimisation, which could radically improve query times.
+%\footnote{Preliminary results show that query times can be reduced dramatically, to roughly match \SRILM. For space reasons we defer this for future work.} 
+%As mentioned earlier, this quantity is not required unless we move to $3$ or higher order $m$grams.
 
 \begin{figure}[tb]
 \input{figures/fig-europarl-pplx-ngram}
